--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -1,85 +1,65 @@
-group:
-    edit:
-        submit: 'Actualizar grupo'
-    show:
-        name: 'Nombre de grupo'
-    new:
-        submit: 'Crear grupo'
-    flash:
-        updated: 'El grupo ha sido actualizado.'
-        created: 'El grupo ha sido creado.'
-        deleted: 'El grupo ha sido borrado.'
+general:
+    acceso_denegado: 'No tiene permisos para realizar esta operación'
+    acciones: Acciones
+    agregar: Agregar
+    cancelar: Cancelar
+    eliminar: Eliminar
+    listar: Listar
+    modificar: Modificar
+    submit: Aceptar
+    ver: Ver
+    volver: Volver
+
 security:
-    login:
-        solicitud_credenciales: 'Ingrese usuario y contraseña'
-        username: 'Nombre de usuario'
-        password: Contraseña
-        remember_me: Recordar
-        submit: Entrar
-profile:
-    show:
-        username: 'Nombre de usuario'
-        email: Email
-    edit:
-        submit: 'Actualizar usuario'
-    flash:
-        updated: 'El perfil ha sido actualizado.'
-change_password:
-    submit: 'Cambiar contraseña'
-    flash:
-        success: 'La contraseña se ha cambiado con éxito.'
-registration:
-    check_email: 'Se ha enviado un email a %email%. Contiene un enlace de activación que debes presionar para activar tu cuenta.'
-    confirmed: 'Felicidades %username%, tu cuenta está ahora confirmada.'
-    back: 'Volver a la página original.'
-    submit: Registrar
-    flash:
-        user_created: 'El usuario se ha creado satisfactoriamente.'
-    email:
-        subject: 'Bienvenido %username%!'
-        message: |
-            Hola %username%!
-
-            Para completar la validación de tu cuenta - por favor visita %confirmationUrl%
-
-            Atentamente,
-            el Equipo.
-
-resetting:
-    check_email: |
-        Un email ha sido enviado. Contiene un enlace de activación que debes presionar para restablecer tu contraseña.
-         Nota: Solo se puede solicitar una nueva contraseña dentro %tokenLifetime% horas.
-
-        Si no recibe un correo electrónico, comprueba tu carpeta de correo no deseado o inténtelo de nuevo.
-
-    request:
-        username: 'Nombre de usuario o correo electrónico'
-        submit: 'Restablecer contraseña'
-    reset:
-        submit: 'Cambiar contraseña'
-    flash:
-        success: 'La contraseña se ha cambiado con éxito.'
-    email:
-        subject: 'Restablecer Contraseña'
-        message: |
-            Hola %username%!
-
-            Para restablecer tu contraseña - por favor visita %confirmationUrl%
-
-            Atentamente,
-            el Equipo.
-
-layout:
-    logout: Salir
-    login: Entrar
-    register: Registrar
-    logged_in_as: 'Identificado como %username%'
-form:
-    group_name: 'Nombre de grupo'
+    solicitud_credenciales: 'Ingrese usuario y contraseña'
     username: 'Nombre de usuario'
-    email: Email
-    current_password: 'Contraseña actual'
     password: Contraseña
-    password_confirmation: 'Repita la contraseña'
-    new_password: 'Nueva contraseña'
-    new_password_confirmation: 'Repita la contraseña'
+    remember_me: Recordar
+    logged_in_as: 'Identificado como %username%'
+    login: Ingresar
+    logout: Salir
+
+group:
+    new:
+        titulo: 'Nuevo grupo'
+        grupo_creado: 'Grupo creado'
+    edit:
+        titulo: 'Modificar grupo'
+        grupo_modificado: 'Grupo modificado'
+    show:
+        titulo: 'Grupo'
+    remove:
+        titulo: 'Eliminar grupo'
+        grupo_eliminado: 'Grupo eliminado'
+        advertencia: '¡Atención! Se eliminará al grupo "%name%" del sistema. ¿Desea continuar?'
+    list:
+        titulo: 'Grupos'
+        id: 'Id'
+        name: 'Nombre'
+    type:
+        name: 'Nombre de grupo'
+
+user:
+    new:
+        titulo: 'Nuevo usuario'
+        usuario_creado: 'Usuario creado'
+    edit:
+        titulo: 'Modificar usuario'
+        usuario_modificado: 'Usuario modificado'
+    show:
+        titulo: 'Usuario'
+    remove:
+        titulo: 'Eliminar usuario'
+        usuario_eliminado: 'Usuario eliminado'
+        advertencia: '¡Atención! Se eliminará al usuario "%username%" del sistema. ¿Desea continuar?'
+    list:
+        titulo: 'Usuarios'
+        id: 'Id'
+        email: 'Email'
+        username: 'Nombre'
+    type:
+        email: 'Email'
+        username: 'Nombre de usuario'
+        plain_password:
+            password: 'Contraseña'
+            confirmacion: 'Repita la contraseña'
